tests/baselines/reference/implementPublicPropertyAsPrivate.errors.txt
==== tests/cases/compiler/implementPublicPropertyAsPrivate.ts (1 errors) ====
    interface I {
        x: number;
    }
    class C implements I {
          ~
!!! error TS2421: Class 'C' incorrectly implements interface 'I':
!!! error TS2421:   Private property 'x' cannot be reimplemented.
        private x = 0; // should raise error at class decl
    }